# italian-card-games-rl

./: .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  MODULE.bazel  README.md
italian-card-games/common/: BUILD.bazel
italian-card-games/common/cards/: BUILD.bazel  cards.hpp
italian-card-games/common/cards/tests/: BUILD.bazel  cards_test.cpp
scripts/: refresh_compile_commands.sh  run_clang_tidy.sh
